--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "google-fonts-webpack-plugin": "^0.4.4",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss-ripple": "^0.6.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.0.0"
   },
