--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rest-countries",
   "private": true,
   "dependencies": {
+    "@minthesize/futurism": "^0.7.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
