Use StimulusReflex to filter countries

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "autoprefixer": "^9",
     "google-fonts-webpack-plugin": "^0.4.4",
     "postcss": "^7",
+    "stimulus": "^2.0.0",
+    "stimulus_reflex": "3.4.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tailwindcss-ripple": "^0.6.0",
     "turbolinks": "^5.2.0",
