--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
+    "@rails/webpacker": "5.3.0",
     "autoprefixer": "^9",
-    "google-fonts-webpack-plugin": "^0.4.4",
     "postcss": "^7",
     "stimulus": "^2.0.0",
     "stimulus_reflex": "3.4.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "tailwindcss-ripple": "^0.6.0",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.0.0"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "mini-css-extract-plugin": "^1.6.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
