--- a/package.json
+++ b/package.json
@@ -2,22 +2,18 @@
   "name": "rest-countries",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.3.0",
-    "autoprefixer": "^9",
-    "postcss": "^7",
-    "stimulus": "^2.0.0",
-    "stimulus_reflex": "3.4.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "@hotwired/stimulus": "^3.0.1",
+    "@hotwired/turbo-rails": "^7.1.1",
+    "autoprefixer": "^10.4.2",
+    "esbuild": "^0.14.23",
+    "esbuild-rails": "^1.0.3",
+    "postcss": "^8.4.6",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^3.0.23"
   },
   "version": "0.1.0",
-  "devDependencies": {
-    "mini-css-extract-plugin": "^1.6.0",
-    "webpack-dev-server": "^3.11.2"
+  "scripts": {
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --postcss -m",
+    "build": "./build.js"
   }
 }
