--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --postcss -m",
     "build": "./build.js"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
